# namyeoju-golf-club

./: .gitignore  generate_all_ui2py.py  main.py  pyproject.toml  ui.ps1
app/: MainWindow.py  ReservationThread.py
app/lib/: Config.py  Crypto.py  webdriver.py
app/ui/: MainWindow.ui  ui_MainWindow.py
tests/: test_namyeoju.py
